--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.initialization-mode=always
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.show_sql = true
+spring.jpa.properties.hibernate.show_sql = false
 spring.jpa.properties.hibernate.format_sql = true
 
 management.endpoint.health.show-details = always
