Push para mentor ajudar a corrigir bug de integração com o banco de dados

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>PropostaApp</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
