--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,34 @@
 version: '3'
 services:
+  docker-mysql:
+    image: mysql:8.0
+    environment:
+      MYSQL_ROOT_PASSWORD: Pa55w0rd
+      MYSQL_DATABASE: propostadb
+    ports:
+      - 3333:3306
+
+  app:
+    image: maxcosta0/proposta
+    container_name: proposta_container
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://docker-mysql:3306/propostadb?serverTimezone=UTC
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: Pa55w0rd
+    ports:
+      - 8080:8080
+    depends_on:
+      # Delay para esperar o mysql subir sem utilizar dockerize.
+      - prometheus
+      - jaeger
+      - kafka
+      - zookeeper
+      - contas
+      - analise
+      - transacoes
+      - postgres
+      - docker-mysql
+
 
   zookeeper:
     image: "confluentinc/cp-zookeeper:5.2.1"
