--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/propostadb?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=07maxley
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3333/propostadb?serverTimezone=UTC}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Pa55w0rd}
 spring.datasource.initialization-mode=always
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
