Cadastrando Biometria para usuario que possui um cartao

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.format_sql = true
 
 management.endpoint.health.show-details = always
 spring.cloud.discovery.client.composite-indicator.enabled=false
+
+server.port = ${SERVER_PORT: 8081}
