Configurando o sistema para se comunicar com o servidor de autenticação (keycloak)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ management.endpoint.health.show-details = always
 spring.cloud.discovery.client.composite-indicator.enabled=false
 
 server.port = ${SERVER_PORT: 8081}
+
+## spring security resource server configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/proposta}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/proposta/protocol/openid-connect/certs}
