--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,10 @@ server.port = ${SERVER_PORT: 8081}
 ## spring security resource server configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/proposta}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/proposta/protocol/openid-connect/certs}
+
+
+## Metricas
+management.endpoints.web.exposure.include=info,heatlh,prometheus
+management.endpoints.prometheus.enable=true
+management.metrics.tags.aplicacao=${NOME_DA_APLICACAO:servico de proposta}
+management.metrics.tags.ambiente=${AMBIENTE:desenvolvimento}
