--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,18 @@ server.port = ${SERVER_PORT: 8081}
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/proposta}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/proposta/protocol/openid-connect/certs}
 
+# feign
+feign.hystrix.enabled=true 
 
 ## Metricas
 management.endpoints.web.exposure.include=info,heatlh,prometheus
 management.endpoints.prometheus.enable=true
 management.metrics.tags.aplicacao=${NOME_DA_APLICACAO:servico de proposta}
 management.metrics.tags.ambiente=${AMBIENTE:desenvolvimento}
+
+##Jaeger
+opentracing.jaeger.enabled=${JAEGER_ENABLED:true}
+opentracing.jaeger.service-name=Proposta
+opentracing.jaeger.http-sender.url=${JAEGER_ENDPOINT:http://localhost:14268/api/traces}
+opentracing.jaeger.probabilistic-sampler.sampling-rate=${JAEGER_SAMPLER:1}
+opentracing.jaeger.rate-limiting-sampler.max-traces-per-second=${JAEGER_SAMPLER:10}
