Configurando Prometheus para armazenar as metricas da aplicação

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -142,7 +142,7 @@ services:
     image: prom/prometheus
     volumes:
       - prometheus-volume:/etc/prometheus/
-    network_mode: bridge
+    network_mode: host
     ports:
       - "9090:9090"
 
