Criptografando documento de cliente para persistir no banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,10 @@ server.port = ${SERVER_PORT: 8081}
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/proposta}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://localhost:18080/auth/realms/proposta/protocol/openid-connect/certs}
 
+# Encrypt
+config.salt = "be22411cc4391bd1"
+config.secret = "uJSNRAVKueud4J2uNitEsS0Fx2sIuW60"
+
 # feign
 feign.hystrix.enabled=true 
 
